; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_inf.c_inf_get_value.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_inf.c_inf_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_value = type { i32 }
%struct.inf_section = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.inf_value* @inf_get_value(%struct.inf_section* %0, i8* %1) #0 {
  %3 = alloca %struct.inf_value*, align 8
  %4 = alloca %struct.inf_section*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.inf_value*, align 8
  store %struct.inf_section* %0, %struct.inf_section** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.inf_value* null, %struct.inf_value** %6, align 8
  br label %7

7:                                                ; preds = %20, %2
  %8 = load %struct.inf_section*, %struct.inf_section** %4, align 8
  %9 = call i64 @inf_section_next_value(%struct.inf_section* %8, %struct.inf_value** %6)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %7
  %12 = load %struct.inf_value*, %struct.inf_value** %6, align 8
  %13 = getelementptr inbounds %struct.inf_value, %struct.inf_value* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @strcasecmp(i32 %14, i8* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %11
  %19 = load %struct.inf_value*, %struct.inf_value** %6, align 8
  store %struct.inf_value* %19, %struct.inf_value** %3, align 8
  br label %22

20:                                               ; preds = %11
  br label %7

21:                                               ; preds = %7
  store %struct.inf_value* null, %struct.inf_value** %3, align 8
  br label %22

22:                                               ; preds = %21, %18
  %23 = load %struct.inf_value*, %struct.inf_value** %3, align 8
  ret %struct.inf_value* %23
}

declare dso_local i64 @inf_section_next_value(%struct.inf_section*, %struct.inf_value**) #1

declare dso_local i32 @strcasecmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
